# qvd4nifi

./: CHANGELOG.md  LICENSE.md  README.md  noxfile.py  pyproject.toml
qvd4nifi/: reader.py  writer.py
qvd4nifi/processors/: dummy.py  reader.py
scripts/: build_nar.py
